# sparql-service

./: .gitignore  Cargo.toml  Dockerfile  README.md  exist_package.yml  release.sh  validate-push.yml  validate_pr.yml
.github/: dependabot.yml
.github/workflows/: build.yml
data/: test
data/01-unzip-tei-files/: ADSfragm16.xml  AG00001.xml  AG00002.xml  AGmasTefut1.xml  AHB001gondar.xml  AMFB001.xml  AMFB002.xml  AMFB003.xml  AMQG001.xml  AMQG002.xml  AMQG003.xml  AMQG004.xml  ANLcr1.xml  ANLcr10.xml  ANLcr11.xml  ANLcr12.xml  ANLcr13.xml  ANLcr133.xml  ANLcr134.xml  ANLcr14.xml  ANLcr15.xml  ANLcr16.xml  ANLcr17.xml  ANLcr18.xml  ANLcr19.xml  ANLcr2.xml  ANLcr20.xml  ANLcr21.xml  ANLcr22.xml  ANLcr23.xml  ANLcr24.xml  ANLcr26.xml  ANLcr27.xml  ANLcr3.xml  ANLcr4.xml  ANLcr43.xml  ANLcr5.xml  ANLcr53.xml  ANLcr6.xml  ANLcr60.xml  (+57065 more)
data/02-tei-to-rdf-xml/: ADSfragm16.xml  AG00001.xml  AG00002.xml  AGmasTefut1.xml  AHB001gondar.xml  (+57101 more)
output/: ADSfragm16.ttl  AEDT001.ttl  AEDT002.ttl  AEDT005.ttl  AEDT008.ttl  AEDT010.ttl  AEDT015.ttl  AEDT038.ttl  AEDT053.ttl  AEDT059.ttl  AEDT062.ttl  AG00001.ttl  AG00002.ttl  AGmasTefut1.ttl  AMFB001.ttl  AMFB002.ttl  AMFB003.ttl  AMQG001.ttl  AMQG002.ttl  AMQG003.ttl  AMQG004.ttl  ANLcr1.ttl  ANLcr10.ttl  ANLcr11.ttl  ANLcr115.ttl  ANLcr12.ttl  ANLcr125.ttl  ANLcr13.ttl  ANLcr133.ttl  ANLcr134.ttl  ANLcr14.ttl  ANLcr15.ttl  ANLcr16.ttl  ANLcr17.ttl  ANLcr18.ttl  ANLcr19.ttl  ANLcr2.ttl  ANLcr20.ttl  ANLcr21.ttl  ANLcr22.ttl  (+50162 more)
src/: main.rs
test/: canonicalize-bnodes.awk  pipeline.Dockerfile  qlever.Dockerfile  sparql_spec.bats
(+107375 files in other folders)
