[package]
name = "sparql-service"
version = "0.0.2"
edition = "2024"
authors = ["Claudius Teodorescu <claudius.teodorescu@gmail.com>"]
description = "Converts XML to RDF/Turtle."

[dependencies]
decompress = "0.6.0"
#decompress = { version = "0.6.0", default-features = false, feature = "zip" }
glob = "0.3.3"
oxrdfxml = "0.2.3"
oxttl = "0.2.3"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
panic = "abort"
